--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ streamlit>=1.28.0
 pandas>=2.0.0
 plotly>=5.17.0
 numpy>=1.24.0
-scikit-learn>=1.3.0
+reportlab>=4.0.0
+Pillow>=10.0.0
+openpyxl>=3.1.0
+python-dateutil>=2.8.0
